refactor: replace Arrays.asList with List.of for tab completion options